[package]
name = "todo-rotomy"
version = "0.1.0"
authors = ["roy-ganz <roy.ganz@glanis.biz>"]
edition = "2018"

[dependencies]
mysql_async = "0.27"
rocket = {version = "0.5.0-rc.1", features= ["json"]}
rocket_db_pools = {version = "0.1.0-rc"}
serde = "1"

toql = {version = "0.3", features=["serde"], git = "https://github.com/roy-ganz/toql"}
toql_mysql_async = {version = "0.3", git = "https://github.com/roy-ganz/toql_mysql_async"}
toql_rocket= {version = "0.3", features=["mysql"], git = "https://github.com/roy-ganz/toql_rocket"}

[patch.crates-io]
rocket = {path ="../rocket-local/Rocket-master/core/lib"}
rocket_db_pools= { path ="../rocket-local/Rocket-master/contrib/db_pools/lib" }