[package]
name = "todo-rotomy"
version = "0.1.0"
authors = ["Roy Ganz <roy.ganz@glanis.biz>"]
edition = "2018"
description = "Todo CRUD example with Rocket, Toql and MySQL"
keywords = ["rocket", "toql", "mysql", "server", "orm", "web"]
license = "MIT OR Apache-2.0"

[dependencies]
rocket = {version = "0.5.0-rc.1", features= ["json"]}
rocket_db_pools = {version = "0.1.0-rc"}
serde = "1"
toql = {version = "0.4", features=["serde"], git = "https://github.com/roy-ganz/toql"}
toql_mysql_async = {version = "0.4", git = "https://github.com/roy-ganz/toql_mysql_async"}
toql_rocket= {version = "0.4", git = "https://github.com/roy-ganz/toql_rocket"}
tracing = "0.1"
tracing-subscriber = "0.2"

[patch.crates-io]
rocket = { git = "https://github.com/SergioBenitez/Rocket"}
rocket_db_pools= {  git = "https://github.com/SergioBenitez/Rocket"}